--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "This respository is intended for the use of Focus College Students enrolled in the Advanced Certificate of Software Development located in Kelowna, BC and Surrey, BC.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "tsc",
+
+    "start": "node dist/index.js",
+    
+    "build": "npm run compile && npm run start"
   },
   "repository": {
     "type": "git",
