--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "compile": "tsc",
     "start": "node dist/index.js",
-    "build": "npm run compile && npm run start"
+    "build": "npm run compile && npm run start",
+    "lint": "eslint src/**/*.ts --ext .ts --fix",
+    "build:lint": "npm run lint && npm run  build"
   },
   "repository": {
     "type": "git",
