--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "acsd-final-colby-boettcher",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "This respository is intended for the use of Focus College Students enrolled in the Advanced Certificate of Software Development located in Kelowna, BC and Surrey, BC.",
   "main": "index.js",
   "scripts": {
     "compile": "tsc",
     "start": "node dist/index.js",
     "build": "npm run compile && npm run start",
+    "build:dev": "npm run lint && npm run format && npm run  build",
     "lint": "eslint src/**/*.ts --ext .ts --fix",
-    "build:lint": "npm run lint && npm run  build"
+    "format": "prettier --write src/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "eslint": "^7.10.0",
+    "prettier": "^2.1.2",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   }
