--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "npm run compile && npm run start",
     "build:dev": "npm run lint && npm run format && npm run  build",
     "lint": "eslint src/**/*.ts --ext .ts --fix",
-    "format": "prettier --write src/**/*.ts"
+    "format": "prettier --write src/**/*.ts",
+    "test": "mocha -r ts-node/register tests/**/*.spec.ts"
   },
   "repository": {
     "type": "git",
@@ -22,9 +23,13 @@
   },
   "homepage": "https://github.com/CBoettcher19590/developing-software-intro-final#readme",
   "devDependencies": {
+    "@types/chai": "^4.2.13",
+    "@types/mocha": "^8.0.3",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
+    "chai": "^4.2.0",
     "eslint": "^7.10.0",
+    "mocha": "^8.1.3",
     "prettier": "^2.1.2",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
