--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "acsd-final-colby-boettcher",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "This respository is intended for the use of Focus College Students enrolled in the Advanced Certificate of Software Development located in Kelowna, BC and Surrey, BC.",
   "main": "index.js",
   "scripts": {
     "compile": "tsc",
     "start": "node dist/index.js",
     "build": "npm run compile && npm run start",
-    "build:dev": "npm run lint && npm run format && npm run  build",
+    "build:dev": "npm run lint && npm run format && npm run test && npm run  build",
     "lint": "eslint src/**/*.ts --ext .ts --fix",
     "format": "prettier --write src/**/*.ts",
-    "test": "mocha -r ts-node/register tests/**/*.spec.ts"
+    "test": "mocha -r ts-node/register tests/**/*.spec.ts",
+    "test:coverage": "nyc mocha -r ts-node/register tests/**/*.spec.ts"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   },
   "homepage": "https://github.com/CBoettcher19590/developing-software-intro-final#readme",
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.2.13",
     "@types/mocha": "^8.0.3",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
@@ -30,6 +32,7 @@
     "chai": "^4.2.0",
     "eslint": "^7.10.0",
     "mocha": "^8.1.3",
+    "nyc": "^15.1.0",
     "prettier": "^2.1.2",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
